--- a/css/custom.css
+++ b/css/custom.css
@@ -1,26 +1,72 @@
+:root {
+  --dark-cyan: hsl(185, 75%, 39%);
+  --very-dark-desaturated-blue: hsl(229, 23%, 23%);
+  --dark-grayish-blue: hsl(227, 10%, 46%);
+  --dark-gray: hsl(0, 0%, 59%);
+  --black: hsl(0, 0%, 0%);
+}
+
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 1rem;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+.contenedor {
+  font-family: 'Kumbh Sans', sans-serif;
+  background-color: var(--dark-cyan);
+}
+
 .nav-link {
   font-style: arial;
   color: black;
 }
 
-.contenedor {
-  background-image: url("/img/Tarp.jpg");
-}
-
 .card-perfil {
-  color: black;
-  text-align: center;
+  background-color: var(--dark-grayish-blue);
 }
 
 .card-perfil .imagen {
-  height: 300px;
-  border-radius: 150px;
+  height: 200px;
+  border-radius: 100px;
   display: block;
   margin: auto;
 }
 
 .card-perfil .imagen .card-texto {
-  color: darkolivegreen;
+  text-align: center;
+}
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100vh;
+}
+
+.cards-container {
+  background-color: burlywood;
+  width: 326px;
+  border-radius: 16px;
+  overflow: hidden;
+}
+
+.cards-container .imagen {
+  width: 300px;
+  height: 100px;
 }
 
 /*!
