--- a/css/custom.css
+++ b/css/custom.css
@@ -1,32 +1,59 @@
-:root {
-  --dark-cyan: hsl(185, 75%, 39%);
-  --very-dark-desaturated-blue: hsl(229, 23%, 23%);
-  --dark-grayish-blue: hsl(227, 10%, 46%);
-  --dark-gray: hsl(0, 0%, 59%);
-  --black: hsl(0, 0%, 0%);
+html {
+  margin: 0;
+  padding: 0;
 }
 
-.container-cards {
+body {
+  width: 100%;
+  height: 100px;
+  font-family: fantasy;
+  letter-spacing: 0.03cm;
+  line-height: 1.6;
+}
+
+.container {
+  width: 100%;
+  height: 430px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
 }
 
-.container-cards-img {
+.cards {
   border-radius: 100px;
+  width: 330px;
+  height: 430px;
+  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  margin: 20px;
+  text-align: center;
+  -webkit-transition: all 0.25s;
+  transition: all 0.25s;
+}
+
+.cards:hover {
+  -webkit-transform: translateY(-15px);
+          transform: translateY(-15px);
+  -webkit-box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+.cards-img {
   width: 500px;
   height: 500px;
 }
 
-.container-cards-text {
-  margin: 15px;
-  font-family: fantasy;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+.cards-text {
+  padding: 0 1rem;
+  font-size: 16px;
+  font-weight: 300;
 }
 
 /*!
