--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,26 +1,50 @@
-:root {
-    --dark-cyan: hsl(185, 75%, 39%);
-    --very-dark-desaturated-blue: hsl(229, 23%, 23%);
-    --dark-grayish-blue: hsl(227, 10%, 46%);
-    --dark-gray: hsl(0, 0%, 59%);
-    --black: hsl(0, 0%, 0%);
+html {
+    margin: 0;
+    padding: 0;
 }
 
-.container-cards {
+body {
+    width: 100%;
+    height: 100px;
+    font-family: fantasy;
+    letter-spacing: 0.03cm;
+    line-height: 1.6;
+}
+
+.container {
+    width: 100%;
+    height: 430px;
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
 }
 
-.container-cards-img {
+.cards {
     border-radius: 100px;
+    width: 330px;
+    height: 430px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    text-align: center;
+    transition: all 0.25s;
+}
+
+.cards:hover {
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+.cards-img {
     width: 500px;
     height: 500px;
 }
 
-.container-cards-text {
-    margin: 15px;
-    font-family: fantasy;
-    align-self: center;
+.cards-text {
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
 }
 
 @import "../node_modules/bootstrap/scss/bootstrap";
