--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,34 +1,38 @@
-html {
+html,
+body {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    background-color: cornflowerblue;
 }
 
 body {
     width: 100%;
     height: 100px;
-    font-family: fantasy;
-    letter-spacing: 0.03cm;
+    letter-spacing: 0.03em;
     line-height: 1.6;
 }
 
+//aqi solo son estilos de mi perfil
 .container {
-    width: 100%;
-    height: 430px;
+    width: 400px;
+    height: 400px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: auto;
+    margin-bottom: 300px;
 }
 
 .cards {
-    border-radius: 100px;
-    width: 330px;
-    height: 430px;
+    border-radius: 8px;
+    width: 400px;
+    height: 550px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     margin: 20px;
-    text-align: center;
+    text-align: left;
     transition: all 0.25s;
+    background-color: blanchedalmond;
 }
 
 .cards:hover {
@@ -36,15 +40,59 @@ body {
     box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
 }
 
-.cards-img {
-    width: 500px;
-    height: 500px;
+img {
+    width: 400px;
+    height: 350px;
 }
 
-.cards-text {
+p {
     padding: 0 1rem;
-    font-size: 16px;
-    font-weight: 300;
+    font-size: 18px;
+    font-weight: 16px;
+    font-family: 'Akaya Kanadaka', cursive;
+    text-align: center;
 }
 
+//aqui empiezan las targetas de mi aprendizaje
+.targetas {
+    height: 400px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 300px;
+}
+
+.targe {
+    width: 400px;
+    height: 450px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    border-radius: 8px;
+    transition: all 0.25s;
+    background-color: blanchedalmond;
+    img {
+        width: 400px;
+        height: 300px;
+    }
+    p {
+        padding: 0 1rem;
+        font-size: 20px;
+        font-weight: 16px;
+        font-family: 'Akaya Kanadaka', cursive;
+        text-align: center;
+    }
+}
+
+.targe:hover {
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+footer {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+
+@import "../node_modules/bootstrap/scss/bootstrap";
 @import "../node_modules/bootstrap/scss/bootstrap";
